--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_baseline",
+  "name": "auth_microservice",
   "version": "1.0.0",
-  "description": "Node.js Baseline for Kot ERP Microservices",
+  "description": "Auth Microservices for Kot ERP",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -18,6 +18,7 @@
     "boom": "^7.3.0",
     "celebrate": "^10.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.12.2",
